2025-08-06T01:54:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16765573609 # 727
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-06
* notice: last 14d: unq all: 4 1609
* notice: prev accum: outdated-unq outdated-all / unq all: 2725 263428 / 2753 265103
* notice: next accum: outdated-unq outdated-all / unq all: 2727 263548 / 2755 265220
* notice: prev exec diff / last date diff / accum: unq all: +2 +117 -1 -63 / +2 +13 -0 -0 / 2 13
* notice: removed / changed dates: [2025-07-22] / [2025-07-23 2025-08-05 2025-08-06]

2025-08-05T01:55:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16738546959 # 726
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 4 1611
* notice: prev accum: outdated-unq outdated-all / unq all: 2723 263310 / 2752 264987
* notice: next accum: outdated-unq outdated-all / unq all: 2725 263428 / 2753 265103
* notice: prev exec diff / last date diff / accum: unq all: +1 +116 -1 -64 / +1 +12 -0 -0 / 1 12
* notice: removed / changed dates: [2025-07-21] / [2025-07-22 2025-08-04 2025-08-05]

2025-08-04T02:01:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16712235129 # 725
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-04
* notice: last 14d: unq all: 4 1601
* notice: prev accum: outdated-unq outdated-all / unq all: 2721 263188 / 2750 264866
* notice: next accum: outdated-unq outdated-all / unq all: 2723 263310 / 2752 264987
* notice: prev exec diff / last date diff / accum: unq all: +2 +121 -1 -76 / +2 +10 -0 -0 / 2 10
* notice: removed / changed dates: [2025-07-20] / [2025-07-21 2025-08-03 2025-08-04]

2025-08-03T02:01:23Z: