@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-08-07T01:54:35Z",
-  "count" : 117,
-  "count_minmax" : [ 13, 117 ],
-  "count_decinc" : [ -0, +117 ],
+  "count" : 13,
+  "count_minmax" : [ 13, 13 ],
+  "count_decinc" : [ -0, +13 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
