@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-08-06T01:54:22Z",
-  "count_outdated" : 263548,
-  "uniques_outdated" : 2727,
-  "count" : 265220,
-  "uniques" : 2755,
+  "timestamp" : "2025-08-07T01:54:35Z",
+  "count_outdated" : 263667,
+  "uniques_outdated" : 2730,
+  "count" : 265337,
+  "uniques" : 2757,
   "clones" : [
     {
-      "timestamp": "2025-07-23T00:00:00Z",
-      "count": 56,
-      "count_minmax": [ 15, 119 ],
-      "count_decinc": [ 63, 119 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
       "timestamp": "2025-07-24T00:00:00Z",
-      "count": 119,
+      "count": 55,
       "count_minmax": [ 16, 119 ],
-      "count_decinc": [ 0, 119 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 64, 119 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-25T00:00:00Z",
@@ -133,6 +124,15 @@
     },
     {
       "timestamp": "2025-08-06T00:00:00Z",
+      "count": 117,
+      "count_minmax": [ 13, 117 ],
+      "count_decinc": [ 0, 117 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
       "count": 13,
       "count_minmax": [ 13, 13 ],
       "count_decinc": [ 0, 13 ],
